--- a/www/css/scrolling-nav.css
+++ b/www/css/scrolling-nav.css
@@ -45,14 +45,30 @@ of those sections to manage the look and feel of the site. */
 
 }
 
-.intro-message {
+.intro-message-title {
+    position: relative;
+    padding-top: 15%;
+    padding-bottom: 10%;
+		font-size: 70px;
+		color: whitesmoke;
+		font-weight: bold;
+		font-family: "kg_sorry_not_sorryregular";
+		/*font-family: "kg_sorry_not_sorry_chubRg";*/
+		text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
+.intro-message-subtitle {
     position: relative;
     padding-top: 15%;
     padding-bottom: 10%;
 		font-size: 50px;
 		color: whitesmoke;
 		font-weight: bold;
-		font-family: 'Open Sans', arial, serif;
+		font-family: "kg_sorry_not_sorryregular";
+		/*font-family: "kg_sorry_not_sorry_chubRg";*/
 		text-shadow:
     -1px -1px 0 #000,
     1px -1px 0 #000,
@@ -60,6 +76,31 @@ of those sections to manage the look and feel of the site. */
     1px 1px 0 #000;
 }
 
+.welcome-text{
+
+		font-family: "kg_sorry_not_sorry_chubRg";
+		font-size: 25px;
+
+}
+.travel-text{
+
+		font-family: "kg_sorry_not_sorryregular";
+		font-size: 22px;
+
+}
+
+.theday-text{
+
+		font-family: "kg_sorry_not_sorryregular";
+		font-size: 25px;
+
+}
+.rsvp-form{
+
+		font-family: "kg_sorry_not_sorryregular";
+		font-size: 30px;
+
+}
 .navicon-be {
 	margin-bottom: 2.5%;
 	font-size: 50px;
@@ -74,9 +115,9 @@ of those sections to manage the look and feel of the site. */
 }
 
 .hello-section {
-    height: 100%;
+    height: 120%;
     padding-top: 30px;
-		margin-bottom: 100px;
+		margin-bottom: 150px;
     text-align: center;
     background: #e0bc9c;
     /*background: #eee;*/
@@ -85,8 +126,9 @@ of those sections to manage the look and feel of the site. */
 }
 
 .travel-section {
-    height: 100%;
+    height: 120%;
     padding-top: 100px;
+    margin-bottom: 100px;
     text-align: center;
     background: #fff;
     /*background: #87aca2;*/
@@ -101,14 +143,15 @@ of those sections to manage the look and feel of the site. */
 
 
 
-.travel-header-text{
+.section-header-text{
 
-	margin-top: -50px;
+	margin-top: -20px;
+	/*width:200px;*/
 	padding-bottom: 15px;
-	font-size: 40px;
+	font-size: 60px;
 	color: whitesmoke;
 	font-weight: bold;
-	font-family: 'Open Sans', arial, serif;
+	font-family: 'kg_sorry_not_sorry_chubRg';
 	text-shadow:
 	-1px -1px 0 #000,
 	1px -1px 0 #000,
@@ -117,22 +160,30 @@ of those sections to manage the look and feel of the site. */
 
 }
 
-.theday-icon {
+.theday-icon-left {
 
 	width:200px;
 	height:auto;
 	padding-top: 20px
 
 }
+.theday-icon-right {
+
+	width:200px;
+	height:auto;
+	padding-top: 20px;
+	margin-left: 150px
+
+}
 
 
 .theday-section {
-    height: 100%;
-    padding-top: 15	0px;
+    height: 130%;
+    padding-top: 100px;
     text-align: center;
     /*background: #eee;*/
     background: #f8a9a5;
-		font-family: 'Open Sans', arial, serif;
+		font-family: 'kg_sorry_not_sorry_chubRg';
 }
 
 .info-section {
@@ -143,11 +194,20 @@ of those sections to manage the look and feel of the site. */
     background: #fff;
 }
 .rsvp-section {
-    height: 100%;
+    height: 120%;
     padding-top: 150px;
     text-align: center;
     /*background: #eee;*/
+		font-family: 'kg_sorry_not_sorry_chubRg';
     background: #fff;
 		background: url(../img/Matera_Italy_181305017.jpg) no-repeat center center;
 		background-size: cover;
+}
+
+.rsvp-info {
+	text-align: left;
+	background-color: whitesmoke;
+	font-size: 20px;
+	font-family: 'kg_sorry_not_sorryregular'
+
 }
